feat: Add LED layout configuration and visualization screen
This introduces a new "LED Layout" screen, allowing users to visually configure and preview their LED strip arrangement. This feature makes it easier to match the app's output to the physical hardware setup by allowing customization of the starting corner and data direction.

The new screen provides a real-time visualization of the LED strip around a representation of the screen, including numbering for the first and last LEDs.

Key changes:
-   **New Screen:** Adds `LedLayoutScreen.kt`, a Jetpack Compose UI for visualizing and editing LED layout settings.
-   **Configuration:** Users can now define the LED strip's starting corner (e.g., top-left) and the data direction (clockwise or counter-clockwise). These settings are saved to preferences.
-   **Pixel Extraction Logic:** The `LedDataExtractor` is updated to read the new start corner and direction settings, ensuring pixels are sampled from the screen perimeter in the correct order.
-   **Settings Integration:**
    -   Adds a "LED Layout Visualization" option in the settings screen that navigates to the new UI.
    -   Adds new preference items for "LED Start Corner" and "LED Direction".
-   **UI/UX:**
    -   Enables edge-to-edge display for a more modern UI.
    -   The status bar is now transparent.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -37,6 +37,22 @@
   <string name="pref_summary_y_led">Количество светодиодов по вертикали</string>
   <string name="pref_title_x_led">LED по горизонтали</string>
   <string name="pref_summary_x_led">Количество светодиодов по горизонтали</string>
+  <string name="pref_title_led_start_corner">Начальный угол LED</string>
+  <string name="pref_summary_led_start_corner">Угол, где находится первый светодиод</string>
+  <string-array name="pref_list_led_start_corner">
+    <item>Верхний левый</item>
+    <item>Верхний правый</item>
+    <item>Нижний правый</item>
+    <item>Нижний левый</item>
+  </string-array>
+  <string name="pref_title_led_direction">Направление LED</string>
+  <string name="pref_summary_led_direction">Направление ленты вокруг экрана</string>
+  <string-array name="pref_list_led_direction">
+    <item>По часовой стрелке</item>
+    <item>Против часовой стрелки</item>
+  </string-array>
+  <string name="pref_title_led_layout">Визуализация раскладки LED</string>
+  <string name="pref_summary_led_layout">Просмотр и настройка раскладки светодиодов</string>
   <string name="pref_title_priority">Приоритет</string>
   <string name="pref_summary_priority">Канал приоритета сообщений</string>
   <string name="pref_title_reconnect">Переподключение</string>
