refactor: Move LED count settings into Layout screen
This commit refactors the settings UI by moving the configuration for the number of horizontal and vertical LEDs from the main settings screen directly into the "LED Layout" screen. This change consolidates all layout-related settings into a single, dedicated UI for a more intuitive user experience.

The "LED Layout" screen is now split into a two-pane layout. The left pane displays the real-time visualization of the LED strip, while the right, scrollable pane contains the settings for horizontal/vertical LED counts, start corner, and data direction.

Key changes:
-   **UI Change:** The `LedLayoutScreen` is updated to a `Row`-based, two-pane layout.
-   **New Inputs:** `OutlinedTextField` components for editing the horizontal (`xLed`) and vertical (`yLed`) LED counts are added to the `LedLayoutScreen`. These fields accept numeric input and update the preferences in real-time.
-   **Settings Screen Cleanup:** The `EditTextPreference` items for "Horizontal LEDs" and "Vertical LEDs" have been removed from the main `SettingsScreen`. The list preferences for start corner and direction were also removed, as they are now managed within the layout screen.
-   **String Updates:** The title for the layout screen preference has been shortened from "LED Layout Visualization" to "LED Layout" in both English and Russian localizations.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -51,7 +51,7 @@
     <item>По часовой стрелке</item>
     <item>Против часовой стрелки</item>
   </string-array>
-  <string name="pref_title_led_layout">Визуализация раскладки LED</string>
+  <string name="pref_title_led_layout">Раскладка LED</string>
   <string name="pref_summary_led_layout">Просмотр и настройка раскладки светодиодов</string>
   <string name="pref_title_priority">Приоритет</string>
   <string name="pref_summary_priority">Канал приоритета сообщений</string>
