feat: Enhance LED layout configuration and add UI effects
This commit introduces significant enhancements to the LED layout configuration, providing more granular control over the LED strip. It also adds a variety of background visual effects to the main screen for a more dynamic user interface.

### LED Layout Configuration

The "LED Layout" screen has been updated to allow for more complex and realistic hardware setups.

-   **Individual Side Control:** Users can now independently configure each side of the screen (top, right, bottom, left). For each side, the options are:
    -   `Enabled`: The LEDs on this side are active.
    -   `Disabled`: The LEDs are physically present but will be turned off (sent black).
    -   `Not Installed`: The LEDs on this side are not physically present and are excluded from the data stream.
-   **Bottom Gap for Soundbars:** A new setting allows users to specify a number of LEDs to skip in the center of the bottom edge. This creates a gap in the lighting, which is useful for accommodating soundbars or other obstructions without affecting the rest of the layout.
-   **Real-time Visualization:** The layout visualization now accurately reflects these new settings, showing which LEDs are enabled, disabled, or not installed, and rendering the gap at the bottom.
-   **Pixel Extraction Logic:** The `LedDataExtractor` has been updated to process pixel data according to the new side-specific and gap settings, ensuring the LED output matches the on-screen configuration.

### UI Enhancements

-   **Main Screen Effects:** When the service is active, the main screen now cycles through various animated background effects instead of only showing a rainbow gradient. This includes solid colors, moving bars, and breathing animations. A new "Palette" icon has been added to the main screen to cycle through these effects.
-   **Improved TV Navigation:** The main screen controls (Effects, Power, Settings) are now arranged in a horizontal row, improving u

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -53,6 +53,12 @@
   </string-array>
   <string name="pref_title_led_layout">Раскладка LED</string>
   <string name="pref_summary_led_layout">Просмотр и настройка раскладки светодиодов</string>
+  <string name="pref_title_led_side_top">Верхние LED</string>
+  <string name="pref_title_led_side_right">Правые LED</string>
+  <string name="pref_title_led_side_bottom">Нижние LED</string>
+  <string name="pref_title_led_side_left">Левые LED</string>
+  <string name="pref_title_bottom_gap">Пропуск снизу (LED)</string>
+  <string name="pref_summary_bottom_gap">Количество LED, которые нужно пропустить снизу (например, для саундбара)</string>
   <string name="pref_title_priority">Приоритет</string>
   <string name="pref_summary_priority">Канал приоритета сообщений</string>
   <string name="pref_title_reconnect">Переподключение</string>
