feat: Add RuStore publishing and localize status text
This commit introduces a GitHub Actions workflow to automate publishing new app versions to the RuStore. It also adds localization for the service status text.

-   **RuStore Publishing:** A new `rustore` job is added to the `manual_release.yml` workflow. This job automatically creates a draft version, uploads the APK, and populates release details using the RuStore Public API.
-   **Status Text Localization:** The "Ambient light service is running" text on the main screen is now localized.
    -   A new string resource `status_grabber_running` has been added.
    -   Russian translation for the new string is included.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -246,4 +246,5 @@
   <string name="settings">Настройки</string>
   <string name="quick_tile_label">Universal Ambient Light</string>
   <string name="quick_tile_toast_setup_required">Сначала выполните настройку в приложении</string>
+  <string name="status_grabber_running">Сервис подсветки запущен</string>
 </resources>
