--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -246,4 +246,5 @@
   <string name="settings">Settings</string>
   <string name="quick_tile_label">Universal Ambient Light</string>
   <string name="quick_tile_toast_setup_required">Please complete the setup in the app first</string>
+  <string name="status_grabber_running">Ambient light service is running</string>
 </resources>
