feat: Add capture margin, LED offset, and improve Adalight USB handling
This commit introduces several new features for more flexible LED configuration and improves the user experience for Adalight devices.

Key changes:
-   **Capture Margin:** Adds a "Capture Margin" setting to the LED Layout screen. This allows users to define a percentage-based margin to exclude the screen edges from color grabbing, which is useful for content with black bars (letterboxing/pillarboxing). The capture area is now visualized with a yellow-dashed rectangle in the layout preview.
-   **LED Offset:** Introduces an "LED Offset" setting in the LED Layout screen. This allows users to shift the starting position of the LED data along the perimeter, making it easier to correct for wiring or configuration mismatches without physically altering the setup. The offset is reflected in the LED numbering in the layout visualization.
-   **Adalight USB Permissions:** The USB permission flow for Adalight devices is refactored. The app now explicitly checks for and requests USB permission before starting the screen capture service, providing clearer user guidance. The request is now initiated from the main UI thread instead of a background service, ensuring a more reliable system dialog prompt.
-   **Adalight Baud Rate Setting:** The Adalight baud rate setting has been changed from a manual text input to a `ListPreference` (dropdown menu), offering a predefined list of common baud rates with a recommended default.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,7 +134,25 @@
     <item>adalight</item>
   </string-array>
   <string name="pref_title_adalight_baudrate">Adalight Baud Rate</string>
-  <string name="pref_summary_adalight_baudrate">Serial communication speed for Adalight (usually 115200)</string>
+  <string name="pref_summary_adalight_baudrate">Serial communication speed for Adalight</string>
+  <string-array name="pref_list_adalight_baudrate">
+    <item>9600</item>
+    <item>19200</item>
+    <item>38400</item>
+    <item>57600</item>
+    <item>115200 (recommended)</item>
+    <item>230400</item>
+    <item>250000</item>
+  </string-array>
+  <string-array name="pref_list_adalight_baudrate_values" translatable="false">
+    <item>9600</item>
+    <item>19200</item>
+    <item>38400</item>
+    <item>57600</item>
+    <item>115200</item>
+    <item>230400</item>
+    <item>250000</item>
+  </string-array>
   <string name="pref_title_wled_color_order">WLED Color Order</string>
   <string name="pref_summary_wled_color_order">Color channel order for WLED (RGB, GRB, BRG, etc.)</string>
   <string-array name="pref_list_wled_color_order">
