--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -134,7 +134,25 @@
     <item>adalight</item>
   </string-array>
   <string name="pref_title_adalight_baudrate">Скорость Adalight</string>
-  <string name="pref_summary_adalight_baudrate">Скорость serial порта для Adalight (обычно 115200)</string>
+  <string name="pref_summary_adalight_baudrate">Скорость serial‑порта для Adalight</string>
+  <string-array name="pref_list_adalight_baudrate">
+    <item>9600</item>
+    <item>19200</item>
+    <item>38400</item>
+    <item>57600</item>
+    <item>115200 (рекомендуется)</item>
+    <item>230400</item>
+    <item>250000</item>
+  </string-array>
+  <string-array name="pref_list_adalight_baudrate_values" translatable="false">
+    <item>9600</item>
+    <item>19200</item>
+    <item>38400</item>
+    <item>57600</item>
+    <item>115200</item>
+    <item>230400</item>
+    <item>250000</item>
+  </string-array>
   <string name="pref_title_wled_color_order">Порядок цветов WLED</string>
   <string name="pref_summary_wled_color_order">Порядок каналов для WLED (RGB, GRB и т.д.)</string>
   <string-array name="pref_list_wled_color_order">
