feat: Implement independent LED counts per side
This commit refactors the LED layout configuration to allow users to specify the number of LEDs for the top, right, bottom, and left sides independently. This provides more granular control for non-uniform LED strip arrangements, replacing the previous system that used shared horizontal (x) and vertical (y) counts.

The "LED Layout" screen has been updated to include separate input fields for each of the four sides. The pixel extraction logic and visualization now use these individual counts to accurately sample screen data and render the layout preview.

For backward compatibility, the old horizontal and vertical LED counts are used as fallback values if the new per-side settings have not yet been configured.

Key changes:
-   **Per-Side LED Counts:** The single horizontal and vertical LED count settings (`xLed`, `yLed`) are replaced with four new settings: `led_count_top`, `led_count_right`, `led_count_bottom`, and `led_count_left`.
-   **Updated Layout Screen:** The `LedLayoutScreen` UI is modified to include four `OutlinedTextField` inputs for the new per-side counts, replacing the previous two fields.
-   **Refactored Logic:** The `LedDataExtractor` and the `LedVisualization` composable are updated to work with the four independent side counts, ensuring correct pixel sampling and preview rendering.
-   **Localization:** New string resources for UI labels, helpers, and titles have been added in both English and Russian.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -57,8 +57,40 @@
   <string name="pref_title_led_side_right">Правые LED</string>
   <string name="pref_title_led_side_bottom">Нижние LED</string>
   <string name="pref_title_led_side_left">Левые LED</string>
+  <string name="led_layout_top_count_label">Количество LED сверху</string>
+  <string name="led_layout_right_count_label">Количество LED справа</string>
+  <string name="led_layout_bottom_count_label">Количество LED снизу</string>
+  <string name="led_layout_left_count_label">Количество LED слева</string>
   <string name="pref_title_bottom_gap">Пропуск снизу (LED)</string>
   <string name="pref_summary_bottom_gap">Количество LED, которые нужно пропустить снизу (например, для саундбара)</string>
+  <string name="led_layout_total_leds">Всего LED: %1$d</string>
+  <string name="led_layout_active_sides">Активные стороны</string>
+  <string name="led_layout_side_top">Верх</string>
+  <string name="led_layout_side_right">Право</string>
+  <string name="led_layout_side_bottom">Низ</string>
+  <string name="led_layout_side_left">Лево</string>
+  <string name="led_layout_bottom_gap_label">Пропуск снизу (для саундбара)</string>
+  <string name="led_layout_capture_margin_label">Отступ от края захвата (%)</string>
+  <string name="led_layout_capture_margin_help">0–40%. 0% — весь экран, 10% — небольшая рамка внутри.</string>
+  <string name="led_layout_offset_label">Смещение LED (шагов по периметру)</string>
+  <string name="led_layout_offset_help">Положительное — по направлению обхода, отрицательное — против.</string>
+  <string name="led_layout_dialog_title">Настройки раскладки</string>
+  <string name="led_layout_legend_title">Легенда:</string>
+  <string name="led_layout_legend_first_led">LED #1 (первый)</string>
+  <string name="led_layout_legend_active_leds">Активные LED</string>
+  <string name="led_layout_legend_disabled_leds">Отключенные LED</string>
+  <string name="led_layout_legend_screen">Экран</string>
+  <string name="led_layout_change_button">Изменить настройки</string>
+  <string name="led_side_mode_on">Вкл</string>
+  <string name="led_side_mode_off">Откл</string>
+  <string name="led_side_mode_none">Нет</string>
+  <string name="led_direction_clockwise">По часовой стрелке</string>
+  <string name="led_direction_counterclockwise">Против часовой стрелки</string>
+  <string name="led_corner_top_left">Верхний левый</string>
+  <string name="led_corner_top_right">Верхний правый</string>
+  <string name="led_corner_bottom_right">Нижний правый</string>
+  <string name="led_corner_bottom_left">Нижний левый</string>
+  <string name="action_back">Назад</string>
   <string name="pref_title_priority">Приоритет</string>
   <string name="pref_summary_priority">Канал приоритета сообщений</string>
   <string name="pref_title_reconnect">Переподключение</string>
