--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,8 +57,40 @@
   <string name="pref_title_led_side_right">Right LEDs</string>
   <string name="pref_title_led_side_bottom">Bottom LEDs</string>
   <string name="pref_title_led_side_left">Left LEDs</string>
+  <string name="led_layout_top_count_label">Top LEDs count</string>
+  <string name="led_layout_right_count_label">Right LEDs count</string>
+  <string name="led_layout_bottom_count_label">Bottom LEDs count</string>
+  <string name="led_layout_left_count_label">Left LEDs count</string>
   <string name="pref_title_bottom_gap">Bottom Gap (LEDs)</string>
   <string name="pref_summary_bottom_gap">Number of LEDs to skip at the bottom (e.g., for soundbar)</string>
+  <string name="led_layout_total_leds">Total LEDs: %1$d</string>
+  <string name="led_layout_active_sides">Active sides</string>
+  <string name="led_layout_side_top">Top</string>
+  <string name="led_layout_side_right">Right</string>
+  <string name="led_layout_side_bottom">Bottom</string>
+  <string name="led_layout_side_left">Left</string>
+  <string name="led_layout_bottom_gap_label">Bottom gap (for soundbar)</string>
+  <string name="led_layout_capture_margin_label">Capture margin (%)</string>
+  <string name="led_layout_capture_margin_help">0–40%. 0% – full screen, 10% – a small inner frame.</string>
+  <string name="led_layout_offset_label">LED offset (steps along perimeter)</string>
+  <string name="led_layout_offset_help">Positive – along layout direction, negative – opposite.</string>
+  <string name="led_layout_dialog_title">Layout settings</string>
+  <string name="led_layout_legend_title">Legend:</string>
+  <string name="led_layout_legend_first_led">LED #1 (first)</string>
+  <string name="led_layout_legend_active_leds">Active LEDs</string>
+  <string name="led_layout_legend_disabled_leds">Disabled LEDs</string>
+  <string name="led_layout_legend_screen">Screen</string>
+  <string name="led_layout_change_button">Change settings</string>
+  <string name="led_side_mode_on">On</string>
+  <string name="led_side_mode_off">Off</string>
+  <string name="led_side_mode_none">None</string>
+  <string name="led_direction_clockwise">Clockwise</string>
+  <string name="led_direction_counterclockwise">Counterclockwise</string>
+  <string name="led_corner_top_left">Top left</string>
+  <string name="led_corner_top_right">Top right</string>
+  <string name="led_corner_bottom_right">Bottom right</string>
+  <string name="led_corner_bottom_left">Bottom left</string>
+  <string name="action_back">Back</string>
   <string name="pref_title_priority">Message Priority</string>
   <string name="pref_summary_priority">Message priority channel to use</string>
   <string name="pref_title_reconnect">Reconnect</string>
