feat: Improve background stability and add portrait layout support
This commit introduces significant improvements to the application's stability, especially for background operation on Android TV devices, and adds a responsive layout for portrait mode in the LED configuration screen.

### Background Stability on TV
To ensure the ambient light service runs reliably even when the device is idle or the screen is off, several changes have been made:
-   **Battery Optimization Prompt:** The app now requests the user to disable battery optimizations, which is crucial for long-running background services on many devices.
-   **Wake Locks:** A `PARTIAL_WAKE_LOCK` and a `WifiLock` are now acquired when the screen turns off. This keeps the CPU and Wi-Fi active, allowing the service to send keep-alive packets to WLED or Hyperion controllers and prevent them from reverting to default effects.
-   **Robust MediaProjection Handling:** The service now saves the `MediaProjection` permission data. If the projection is stopped by the system (e.g., when the TV goes to sleep), the service can automatically restart the screen capture when the device wakes up, without requiring user interaction.
-   **Error Handling in WLED Client:** The WLED network client is now more resilient. It detects when network operations are blocked (e.g., `EPERM` error on a sleeping TV) and temporarily pauses sending data to avoid excessive CPU usage and log spam. It also includes logic to automatically reconnect if the connection is lost.

### LED Layout Screen Enhancements
-   **Responsive Layout:** The "LED Layout" screen now adapts to the device's orientation. In portrait mode, it displays the visualization at the top and a scrollable list of settings below, improving usability on phones. The two-pane layout is preserved for landscape orientations.
-   **Improved Edit Dialog:** The dialog for setting the start corner and data direction has been updated to use `FilterChip` components instead of dropdown me

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -103,6 +103,7 @@
   <string name="pref_summary_framerate">Кадров в секунду для отправки на контроллер</string>
   <string name="pref_title_capture_quality">Качество захвата</string>
   <string name="pref_summary_capture_quality">Разрешение захвата экрана (влияет на производительность)</string>
+  <string name="battery_optimization_prompt">Чтобы захват/подсветка стабильнее работали в фоне (особенно на TV), рекомендуем отключить оптимизацию батареи для приложения.</string>
   <string-array name="pref_list_capture_quality">
     <item>Низкое (64px)</item>
     <item>Среднее (128px)</item>
@@ -297,4 +298,5 @@
   <string name="quick_tile_label">Universal Ambient Light</string>
   <string name="quick_tile_toast_setup_required">Сначала выполните настройку в приложении</string>
   <string name="status_grabber_running">Сервис подсветки запущен</string>
+  <string name="foreground_service_media_projection_justification">Это приложение использует сервис MediaProjection для захвата содержимого экрана в реальном времени и отправки цветовых данных на LED контроллеры для создания эффектов подсветки.</string>
 </resources>
