feat: Add analytics, help, and support sections
This commit introduces Firebase Analytics to gather usage data and help improve the application. It also adds new "Help" and "Support Project" sections to the main screen, providing users with quick access to documentation and ways to support development.

### Analytics
- A new `AnalyticsHelper` class is added to log various user interactions and technical events.
- Events tracked include: app launch, screen capture start/stop, connection success/errors, settings changes (protocol, LED config, smoothing, etc.), permission requests, and Quick Tile usage.

### UI and UX
- **Main Screen:** "Help" and "Support Project" buttons have been added to the main screen, which open respective dialogs.
- **Help Dialog:** Provides a brief guide on setting up controllers and includes a link to the detailed `README.md` on GitHub.
- **Support Dialog:** Informs users how they can support the project and links to the `SUPPORT.md` file.

### Documentation
- New `README.md` and `README_RU.md` files are added, providing comprehensive information about features, supported controllers, installation, and configuration.
- A `SUPPORT.md` file is created, detailing ways to support the project financially or by leaving a review.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -299,4 +299,13 @@
   <string name="quick_tile_toast_setup_required">Please complete the setup in the app first</string>
   <string name="status_grabber_running">Ambient light service is running</string>
   <string name="foreground_service_media_projection_justification">This app uses MediaProjection foreground service to capture screen content in real-time and send color data to LED controllers for ambient lighting effects.</string>
+  <string name="help">Help</string>
+  <string name="support_project">Support Project</string>
+  <string name="help_title">How to use</string>
+  <string name="help_message">Before using this app, you need to set up your LED controller:\n\n• WLED: Configure WLED firmware on your ESP8266/ESP32 device\n• Adalight: Connect Arduino with Adalight firmware via USB\n• Hyperion: Install and configure Hyperion server\n\nFor detailed setup instructions, please visit the GitHub repository.</string>
+  <string name="help_open_github">Open GitHub</string>
+  <string name="help_close">Close</string>
+  <string name="support_project_title">Support Project</string>
+  <string name="support_project_message">Thank you for your interest in supporting this project!\n\nYou can support the development through:\n• Boosty\n• Cryptocurrency (TON)\n• Leave a review on Google Play\n\nClick below to see all available options.</string>
+  <string name="support_open_details">View Details</string>
 </resources>
