--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -299,4 +299,13 @@
   <string name="quick_tile_toast_setup_required">Сначала выполните настройку в приложении</string>
   <string name="status_grabber_running">Сервис подсветки запущен</string>
   <string name="foreground_service_media_projection_justification">Это приложение использует сервис MediaProjection для захвата содержимого экрана в реальном времени и отправки цветовых данных на LED контроллеры для создания эффектов подсветки.</string>
+  <string name="help">Справка</string>
+  <string name="support_project">Поддержать проект</string>
+  <string name="help_title">Как использовать</string>
+  <string name="help_message">Перед использованием приложения необходимо настроить контроллер подсветки:\n\n• WLED: Настройте прошивку WLED на вашем устройстве ESP8266/ESP32\n• Adalight: Подключите Arduino с прошивкой Adalight через USB\n• Hyperion: Установите и настройте сервер Hyperion\n\nПодробные инструкции по настройке смотрите в репозитории GitHub.</string>
+  <string name="help_open_github">Открыть GitHub</string>
+  <string name="help_close">Закрыть</string>
+  <string name="support_project_title">Поддержать проект</string>
+  <string name="support_project_message">Спасибо за интерес к поддержке проекта!\n\nВы можете поддержать разработку через:\n• Boosty\n• Криптовалюту (TON)\n• Оставить отзыв в Google Play\n\nНажмите ниже, чтобы увидеть все доступные варианты.</string>
+  <string name="support_open_details">Подробнее</string>
 </resources>
