refactor: Overhaul color smoothing and add presets
This commit refactors the color smoothing implementation, switching from frame-based to time-based settings for more intuitive control. It also introduces smoothing presets and improves the user interface for these settings.

### Color Smoothing Rework
-   **Time-Based Settings:** The "Output Delay" setting has been changed from a frame count to a millisecond value (`0-1000ms`), with a new default of 80ms. This allows for finer control over video synchronization, which is especially useful for players like Jellyfin where the LED output might be ahead of the video.
-   **New `OutputQueue` Logic:** The output queue now uses timestamps to manage the frame delay. It stores frames with their creation time and only sends a frame after the specified `mOutputDelayMs` has passed, ensuring a consistent delay.
-   **Dedicated "Off" State:** Smoothing can now be completely disabled. When turned off, the processing timer is stopped, and color data is sent directly to the device, reducing overhead.

### Smoothing Presets
-   **New Presets:** Four new presets have been added: "Off", "Responsive", "Balanced", and "Smooth". Each preset configures the `Settling Time`, `Output Delay`, and `Update Frequency` to provide a different balance between responsiveness and visual smoothness.
-   **UI Integration:** When a user selects a preset from the settings screen, the corresponding values for the individual smoothing settings are automatically applied. The "Off" preset also disables the main smoothing toggle.

### UI/UX Improvements
-   **Dynamic Settings UI:** The individual smoothing settings (`Settling Time`, `OutputDelay`, `Update Frequency`) in the settings UI now dynamically update when a new preset is selected, immediately reflecting the new values.
-   **Improved Summaries:** The summary text for `Settling Time` and `Output Delay` now includes "ms" to clarify the units. The description for `Output Delay` has also been updated to e

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -223,10 +223,10 @@
     <item>balanced</item>
     <item>smooth</item>
   </string-array>
-  <string name="pref_title_settling_time">Settling Time</string>
-  <string name="pref_summary_settling_time">Transition time between colors in ms (50-500)</string>
-  <string name="pref_title_output_delay">Output Delay</string>
-  <string name="pref_summary_output_delay">Number of buffered frames (0-10)</string>
+  <string name="pref_title_settling_time">Settling Time (ms)</string>
+  <string name="pref_summary_settling_time">Transition time between colors in milliseconds (50-500)</string>
+  <string name="pref_title_output_delay">Output Delay (ms)</string>
+  <string name="pref_summary_output_delay">Delay in milliseconds for video sync (0-1000). Increase for Jellyfin if LEDs are ahead of picture</string>
   <string name="pref_title_update_frequency">Update Frequency</string>
   <string name="pref_summary_update_frequency">Data send frequency to LEDs (Hz)</string>
   <string-array name="pref_list_update_frequency">
