--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -150,6 +150,13 @@
   <string name="toast_must_give_permission">Необходимо разрешение на запись экрана.</string>
   <string name="message_service_started">Нажмите Назад чтобы свернуть. Захват экрана продолжится в фоне</string>
   <string name="error_no_host_name_extra">Странно, здесь ожидалось имя хоста</string>
+  <string name="error_cannot_open_url">Не удалось открыть ссылку. Нет браузера или приложения для открытия этого URL.</string>
+  <string name="url_dialog_title">Открыть ссылку</string>
+  <string name="url_dialog_message">Отсканируйте QR-код или скопируйте ссылку ниже, чтобы открыть её в браузере:</string>
+  <string name="url_dialog_qr_description">QR-код для ссылки</string>
+  <string name="url_dialog_open_link">Открыть ссылку</string>
+  <string name="help_readme_url">https://github.com/vasmarfas/universal-ambient-light/blob/master/README_RU.md</string>
+  <string name="support_url">https://github.com/vasmarfas/universal-ambient-light/blob/master/SUPPORT.md</string>
   <string name="notification_channel_label">Уведомления Universal Ambient Light</string>
   <string name="notification_description">Идет захват содержимого экрана</string>
   <string name="pref_title_use_avg_color">Средний цвет экрана</string>
