--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,6 +150,13 @@
   <string name="toast_must_give_permission">Permission must be granted to record screen data.</string>
   <string name="message_service_started">Press Back to close the app. Your screen content will continue to be sent to Hyperion</string>
   <string name="error_no_host_name_extra">That\'s weird, expected a hostname here</string>
+  <string name="error_cannot_open_url">Cannot open link. No browser or app available to handle this URL.</string>
+  <string name="url_dialog_title">Open Link</string>
+  <string name="url_dialog_message">Scan the QR code or copy the link below to open it in a browser:</string>
+  <string name="url_dialog_qr_description">QR code for the link</string>
+  <string name="url_dialog_open_link">Open Link</string>
+  <string name="help_readme_url">https://github.com/vasmarfas/universal-ambient-light/blob/master/README.md</string>
+  <string name="support_url">https://github.com/vasmarfas/universal-ambient-light/blob/master/SUPPORT.md</string>
   <string name="notification_channel_label">Universal Ambient Light Notifications</string>
   <string name="notification_description">Currently grabbing screen content</string>
   <string name="pref_title_use_avg_color">Send Average Screen Color</string>
