feat: Add per-side capture margins and improve layout UI
This commit refactors the LED layout screen to provide more granular control over the screen capture area and improves the user interface for a more streamlined configuration experience.

### Per-Side Capture Margins
The single capture margin setting has been replaced with individual margin controls for the top, right, bottom, and left sides of the screen.

-   **Fine-Tuned Control:** Users can now set a different percentage-based margin for each edge, allowing for more precise adjustments to avoid on-screen elements like letterbox bars or custom UI overlays.
-   **UI Update:** The layout screen now features four separate text fields for setting each margin individually.
-   **Backward Compatibility:** The implementation ensures a smooth upgrade for existing users. It automatically migrates settings from older, unified margin keys (`pref_key_capture_margin`, `pref_key_capture_margin_horizontal`, `pref_key_capture_margin_vertical`) to the new per-side keys.

### UI/UX Enhancements
The "LED Layout" configuration screen has been significantly improved for better usability:

-   **Integrated Controls:** The "Start Corner" and "Direction" settings, previously in a separate dialog, are now integrated directly into the main settings list using `FilterChip` components. This removes the need for a popup and allows users to see and change these settings instantly.
-   **Logical Grouping:** Input fields for LED counts and side selectors have been reordered to a more intuitive sequence (Left, Top, Right, Bottom).
-   **Improved Visualization:** The first LED in the layout preview is now larger and bolder, making it easier to identify the starting point of the LED strip.
-   **Default Start Corner:** The default starting corner for new configurations has been changed from "top-left" to "bottom-left", which is a more common setup for physical LED strips.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -72,6 +72,18 @@
   <string name="led_layout_bottom_gap_label">Пропуск снизу (для саундбара)</string>
   <string name="led_layout_capture_margin_label">Отступ от края захвата (%)</string>
   <string name="led_layout_capture_margin_help">0–40%. 0% — весь экран, 10% — небольшая рамка внутри.</string>
+  <string name="led_layout_capture_margin_horizontal_label">Горизонтальный отступ захвата (%)</string>
+  <string name="led_layout_capture_margin_horizontal_help">0–40%. Горизонтальный отступ от краёв экрана.</string>
+  <string name="led_layout_capture_margin_vertical_label">Вертикальный отступ захвата (%)</string>
+  <string name="led_layout_capture_margin_vertical_help">0–40%. Вертикальный отступ от краёв экрана.</string>
+  <string name="led_layout_capture_margin_top_label">Отступ сверху (%)</string>
+  <string name="led_layout_capture_margin_top_help">0–40%. Отступ от верхнего края экрана.</string>
+  <string name="led_layout_capture_margin_right_label">Отступ справа (%)</string>
+  <string name="led_layout_capture_margin_right_help">0–40%. Отступ от правого края экрана.</string>
+  <string name="led_layout_capture_margin_bottom_label">Отступ снизу (%)</string>
+  <string name="led_layout_capture_margin_bottom_help">0–40%. Отступ от нижнего края экрана.</string>
+  <string name="led_layout_capture_margin_left_label">Отступ слева (%)</string>
+  <string name="led_layout_capture_margin_left_help">0–40%. Отступ от левого края экрана.</string>
   <string name="led_layout_offset_label">Смещение LED (шагов по периметру)</string>
   <string name="led_layout_offset_help">Положительное — по направлению обхода, отрицательное — против.</string>
   <string name="led_layout_dialog_title">Настройки раскладки</string>
