--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,18 @@
   <string name="led_layout_bottom_gap_label">Bottom gap (for soundbar)</string>
   <string name="led_layout_capture_margin_label">Capture margin (%)</string>
   <string name="led_layout_capture_margin_help">0–40%. 0% – full screen, 10% – a small inner frame.</string>
+  <string name="led_layout_capture_margin_horizontal_label">Horizontal capture margin (%)</string>
+  <string name="led_layout_capture_margin_horizontal_help">0–40%. Horizontal offset from screen edges.</string>
+  <string name="led_layout_capture_margin_vertical_label">Vertical capture margin (%)</string>
+  <string name="led_layout_capture_margin_vertical_help">0–40%. Vertical offset from screen edges.</string>
+  <string name="led_layout_capture_margin_top_label">Top capture margin (%)</string>
+  <string name="led_layout_capture_margin_top_help">0–40%. Top edge offset from screen.</string>
+  <string name="led_layout_capture_margin_right_label">Right capture margin (%)</string>
+  <string name="led_layout_capture_margin_right_help">0–40%. Right edge offset from screen.</string>
+  <string name="led_layout_capture_margin_bottom_label">Bottom capture margin (%)</string>
+  <string name="led_layout_capture_margin_bottom_help">0–40%. Bottom edge offset from screen.</string>
+  <string name="led_layout_capture_margin_left_label">Left capture margin (%)</string>
+  <string name="led_layout_capture_margin_left_help">0–40%. Left edge offset from screen.</string>
   <string name="led_layout_offset_label">LED offset (steps along perimeter)</string>
   <string name="led_layout_offset_help">Positive – along layout direction, negative – opposite.</string>
   <string name="led_layout_dialog_title">Layout settings</string>
